--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   carousel_slider: ^4.2.1
   firebase_core: ^2.22.0
   cloud_firestore: ^4.13.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
