--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^2.22.0
   cloud_firestore: ^4.13.1
   intl: ^0.18.1
+  image_picker: ^1.0.4
+  firebase_storage: ^11.5.1
 
 dev_dependencies:
   flutter_test:
