--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   intl: ^0.18.1
   image_picker: ^1.0.4
   firebase_storage: ^11.5.1
+  easy_localization: ^3.0.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
